Use new API server, only update if needed

--- a/misc/website/overview.html
+++ b/misc/website/overview.html
@@ -30,7 +30,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script>
             $.ajax({
-                url: "https://gotdata.northeurope.cloudapp.azure.com/api/show/characters",
+                url: "https://api.got.show/api/show/characters",
             })
             .done(function( data ) {
                 data.sort(function(a,b) {
